update cors lần n